k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatter-server-service
  namespace: default
  labels:
    app: chatter-server
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: chatter-server
---
apiVersion: v1
kind: Service
metadata:
  name: chatter-server-loadbalancer
  namespace: default
  labels:
    app: chatter-server
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: chatter-server
